ApexBasics/force-app/main/default/objects/Candidate1__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate Name</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>