ApexBasics/force-app/main/default/objects/Candidate1__c/fields/Highest_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Highest_Qualification__c</fullName>
    <label>Highest Qualification</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>