ApexBasics/force-app/main/default/objects/Candidate1__c/fields/Year_Of_Industry_Experience__c.field-meta.xml
<CustomField>
    <fullName>Year_Of_Industry_Experience__c</fullName>
    <label>Year Of Industry Experience</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>